# Scattered_Points_Interpolation

./: .clang-format  .gitignore  CMakeLists.txt  fastBuild.sh
B_spline/: Types.hpp  basis.cpp  basis.h  curve.cpp  curve.h  curve_energy.cpp  energy.cpp  energy.h  mesh_processing.cpp  mesh_processing.h  surface.cpp  surface.h
app/: functions.hpp  main.cpp  test.cpp
cmake/: DownloadProject.CMakeLists.cmake.in  Sparse_InterpDependencies.cmake  Warnings.cmake  patch.cmake  polyscope_patcher.cmake
src/: main.cpp  methods.cpp  methods.hpp
